// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments should compile comments for module: (Output File Strategy "members") (Option Group "1") 1`] = `
"# typedoc-stubs

Comments form module comments

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](interfaces/CommentInterface.md) - Links to CommentInterface
- [Links to CommentInterface.prop](interfaces/CommentInterface.md)
- [Links to CommentInterface.propb](interfaces/CommentInterface.md)
- [CommentEnum.MemberB](enumerations/CommentEnum.md)
- [SameName:var](variables/SameName.md)
- [SameName:interface](interfaces/SameName.md)
- [SameName.prop](interfaces/SameName.md)
- [prop:var](variables/prop.md)
- [_prop_with_underscore:var](variables/prop_with_underscore.md)

External links:

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A <tag></tag> in comments

A \`<tag>\` in backticks

Another object \`{ x: 1 }\`.

<div style={{backgroundColor: "#fff", padding: 16}}>
 <img style={{display: "block"}} height="48" width="48"/>
</div>

Some random {{braces}}.

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Media

You can include media in doc comments:

![alt SomeAlt](media/logo.png)

And include other files:

This is a simple example on how to use include.

![My image alt text](media/logo.png)
 [[include:not-found.md]]

## Code Blocks

\`\`\`css
.class {color:red}
\`\`\`

\`\`\`html
<div>x</div> <tag>y</tag>
\`\`\`

\`single line <code> {block}\`

## Enumerations

- [CommentEnum](enumerations/CommentEnum.md)
- [EnumMembersTable](enumerations/EnumMembersTable.md)

## Classes

- [BaseClassProperties](classes/BaseClassProperties.md)
- [ClassPropertiesTable](classes/ClassPropertiesTable.md)

## Interfaces

- [BaseInterfaceProperties](interfaces/BaseInterfaceProperties.md)
- [CommentInterface](interfaces/CommentInterface.md)
- [CommentInterfaceExtended](interfaces/CommentInterfaceExtended.md)
- [InterfacePropertiesTable](interfaces/InterfacePropertiesTable.md)
- [SameName](interfaces/SameName.md)

## Type Aliases

- [TypeDeclarationTable](type-aliases/TypeDeclarationTable.md)

## Variables

- [SameName](variables/SameName.md)
- [\\_prop\\_with\\_underscore](variables/prop_with_underscore.md)
- [prop](variables/prop.md)
- [propb](variables/propb.md)

## Functions

- [multipleExampleTags](functions/multipleExampleTags.md)
- [parametersTable](functions/parametersTable.md)
- [singleExampleTag](functions/singleExampleTag.md)
"
`;

exports[`Comments should get tables for emum: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Enumeration: EnumMembersTable

## Enumeration Members

| Enumeration Member | Value | Description |
| ------ | ------ | ------ |
| \`member1\` | \`"member1"\` | The subroutine recursively parsed the hexadecimal data. |
"
`;

exports[`Comments should get tables for emum: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Enumeration: EnumMembersTable

## Enumeration Members

<table>
<tr><th align="left">Enumeration Member</th><th align="left">Value</th><th align="left">Description</th></tr>
<tr>
<td>

<a id="member1" name="member1"></a> \`member1\`

</td>
<td>

\`"member1"\`

</td>
<td>

The subroutine recursively parsed the hexadecimal data.

</td>
</tr>
</table>
"
`;

exports[`Comments should get tables for parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: parametersTable()

> **parametersTable**\\<\`T\`\\>(\`param1\`, \`param2\`, \`param3\`): \`number\`

Adds two numbers together.

## Type parameters

| Type parameter | Value | Description |
| ------ | ------ | ------ |
| \`T\` | \`string\` | The type of the numbers to be added. |

## Parameters

| Parameter | Type | Default value | Description |
| ------ | ------ | ------ | ------ |
| \`param1\` | \`number\` | \`undefined\` | The first param to be added. |
| \`param2\` | \`number\` | \`undefined\` | The second param to be added. Some additional text for num2. |
| \`param3\` | \`number\` | \`4\` | The third param to be added. |

## Returns

\`number\`
"
`;

exports[`Comments should get tables for properties: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Class: ClassPropertiesTable

## Extends

- [\`BaseClassProperties\`](BaseClassProperties.md)

## Constructors

### new ClassPropertiesTable()

> **new ClassPropertiesTable**(): [\`ClassPropertiesTable\`](ClassPropertiesTable.md)

#### Returns

[\`ClassPropertiesTable\`](ClassPropertiesTable.md)

#### Inherited from

[\`BaseClassProperties\`](BaseClassProperties.md).[\`constructor\`](BaseClassProperties.md#constructors)

## Properties

| Property | Modifier | Type | Default value | Description | Overrides | Inherited from |
| ------ | ------ | ------ | ------ | ------ | ------ | ------ |
| \`prop1\` | \`private\` | \`boolean\` | \`undefined\` | The subroutine recursively parsed the hexadecimal data. to generate the binary output for input validation. | - | - |
| \`prop2\` | \`readonly\` | \`RegExp\` | \`undefined\` | Below is a breakdown of the notable performances: - The CPU executed the instruction set in parallel with the GPU computations. - The RAM efficiently cached the frequently accessed data for faster retrieval. - The SSD accessed the stored files with lightning speed due to its high read/write capabilities. | - | - |
| \`prop3?\` | \`public\` | \`string\` | \`undefined\` | ### Example of Triple Code Block \`def greet(name): print("Hello, " + name + "!")\` | - | - |
| ~~\`propA\`~~ | \`public\` | \`string\` | \`'propAValue'\` | **Deprecated** | [\`BaseClassProperties\`](BaseClassProperties.md).\`propA\` | - |
| \`propB\` | \`public\` | \`string\` | \`undefined\` | - | - | [\`BaseClassProperties\`](BaseClassProperties.md).\`propB\` |
"
`;

exports[`Comments should get tables for properties: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Class: ClassPropertiesTable

## Extends

- [\`BaseClassProperties\`](http:/example.com/Class.BaseClassProperties.md)

## Constructors

<a id="Constructors" name="Constructors"></a>

### new ClassPropertiesTable()

> **new ClassPropertiesTable**(): [\`ClassPropertiesTable\`](http:/example.com/Class.ClassPropertiesTable.md)

#### Returns

[\`ClassPropertiesTable\`](http:/example.com/Class.ClassPropertiesTable.md)

#### Inherited from

[\`BaseClassProperties\`](http:/example.com/Class.BaseClassProperties.md).[\`constructor\`](http:/example.com/Class.BaseClassProperties.md#Constructors)

## Properties

<table>
<tr><th align="left">Property</th><th align="left">Type</th><th align="left">Default value</th><th align="left">Description</th></tr>
<tr>
<td>

<a id="prop1" name="prop1"></a> \`prop1\`

</td>
<td>

\`boolean\`

</td>
<td>

\`undefined\`

</td>
<td>

The subroutine recursively parsed the hexadecimal data.
to generate the binary output for input validation.

</td>
</tr>
<tr>
<td>

<a id="prop2" name="prop2"></a> \`prop2\`

</td>
<td>

\`RegExp\`

</td>
<td>

\`undefined\`

</td>
<td>

Below is a breakdown of the notable performances:

- The CPU executed the instruction set in parallel with the GPU computations.
- The RAM efficiently cached the frequently accessed data for faster retrieval.
- The SSD accessed the stored files with lightning speed due to its high read/write capabilities.

</td>
</tr>
<tr>
<td>

<a id="prop3" name="prop3"></a> \`prop3?\`

</td>
<td>

\`string\`

</td>
<td>

\`undefined\`

</td>
<td>

### Example of Triple Code Block

\`\`\`python
def greet(name):
print("Hello, " + name + "!")
\`\`\`

</td>
</tr>
<tr>
<td>

<a id="propA" name="propA"></a> ~~\`propA\`~~

</td>
<td>

\`string\`

</td>
<td>

\`'propAValue'\`

</td>
<td>

**Deprecated**

</td>
</tr>
<tr>
<td>

<a id="propB" name="propB"></a> \`propB\`

</td>
<td>

\`string\`

</td>
<td>

\`undefined\`

</td>
<td>

&hyphen;

</td>
</tr>
</table>
"
`;

exports[`Comments should get tables for type declarations: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Type alias: TypeDeclarationTable

> **TypeDeclarationTable**: \`object\`

## Type declaration

| Member | Type | Description |
| ------ | ------ | ------ |
| \`declaration1\` | \`boolean\` | The subroutine recursively parsed the hexadecimal data. to generate the binary output for input validation. |
| \`declaration2\` | \`boolean\` | The subroutine recursively parsed the hexadecimal data. to generate the binary output for input validation. |
| \`declaration3\` | \`"declaration3"\` | - |
"
`;

exports[`Comments should get tables for type declarations: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Type alias: TypeDeclarationTable

> **TypeDeclarationTable**: \`object\`

## Type declaration

<table>
<tr><th align="left">Member</th><th align="left">Type</th><th align="left">Description</th></tr>
<tr>
<td>

\`declaration1\`

</td>
<td>

\`boolean\`

</td>
<td>

The subroutine recursively parsed the hexadecimal data.
to generate the binary output for input validation.

</td>
</tr>
<tr>
<td>

\`declaration2\`

</td>
<td>

\`boolean\`

</td>
<td>

The subroutine recursively parsed the hexadecimal data.
to generate the binary output for input validation.

</td>
</tr>
<tr>
<td>

\`declaration3\`

</td>
<td>

\`"declaration3"\`

</td>
<td>

&hyphen;

</td>
</tr>
</table>
"
`;

exports[`Comments should handle multiple example tags: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: multipleExampleTags()

> **multipleExampleTags**(): \`boolean\`

Function with multiple example tags

## Returns

\`boolean\`

## Examples

\`\`\`ts
// If there are no code blocks, TypeDoc assumes the whole tag
// should be a code block. This is not valid TSDoc, but is recognized
// by VSCode and enables better JSDoc support.

factorial(1)
\`\`\`

If there is a code block, then both TypeDoc and VSCode will treat
text outside of the code block as regular text.

\`\`\`ts
factorial(1)
\`\`\`
"
`;

exports[`Comments should handle single example tags: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Function: multipleExampleTags()

> **multipleExampleTags**(): \`boolean\`

Function with multiple example tags

## Returns

\`boolean\`

## Examples

\`\`\`ts
// If there are no code blocks, TypeDoc assumes the whole tag
// should be a code block. This is not valid TSDoc, but is recognized
// by VSCode and enables better JSDoc support.

factorial(1)
\`\`\`

If there is a code block, then both TypeDoc and VSCode will treat
text outside of the code block as regular text.

\`\`\`ts
factorial(1)
\`\`\`
"
`;
